Fix: sidebar/navigation z-index + sidebar styling

--- a/resources/assets/css/general/utilities.css
+++ b/resources/assets/css/general/utilities.css
@@ -117,9 +117,9 @@
 }
 
 .collapsed-dropdown {
-    box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, 0.05);
+    /* box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, 0.05); */
 
-    @apply absolute left-6 top-0 bg-white rounded-lg p-2 min-w-48 shadow-lg;
+    @apply absolute left-6 top-0 bg-white rounded-lg p-2 min-w-48 shadow-md shadow-grey-100;
 }
 
 .children\:w-6 > * {
